--- a/style.css
+++ b/style.css
@@ -294,14 +294,14 @@ h6 {
   grid-column: 1/ span 2;
   align-items: center;
 }
-
+/* 
 #home-articles .articles-container > *:last-child {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 1rem;
-  /* grid-column: 2/ span 2; */
+  grid-column: 2/ span 2; 
   align-items: center;
-}
+} */
 
 
 #main-footer{
